tests/negative/dave_missingbody.opml
<?xml version="1.0" encoding="ISO-8859-1"?><opml version="1.1">	<head>		<title>Missing Body Test</title>		</head>	</opml>